<resources>

    <string name="app_name">QuantifyThis</string>
    <string name="tab_title_mark_mood">Mood</string>
    <string name="tab_title_heart">Heart Rate</string>
    <string name="tab_title_sleep">Sleep</string>
    <string name="tab_title_sleepmargin_bottom_mark_button">Sleep</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_mark_mood">Mark mood</string>
    <string name="title_activity_main">Quantify This</string>
    <string name="button_input_mood_label">Mark</string>
    <string name="button_mark_mood_label">Mark my mood</string>
    <string name="button_done">Done</string>
    <string name="button_sleep">Sleep</string>
    <string name="button_heart_rate">Heart rate</string>
    <string name="button_agenda_mood_label">Agenda</string>
    <string name="button_statistics_label">Statistics</string>
    <string name="button_settings_label">Settings</string>
    <string name="shake_instructions">Hold your finger to your neck and shake the phone with your pulse rate. You can stop when the phone vibrates.</string>

    <string name="mood_label_1_left">Energized</string>
    <string name="mood_label_1_right">Tired</string>
	<string name="mood_label_2_left">Focused</string>
    <string name="mood_label_2_right">Distracted</string>
	<string name="mood_label_3_left">Happy</string>
    <string name="mood_label_3_right">Sad</string>
	<string name="mood_label_4_left">Loving</string>
    <string name="mood_label_4_right">Angry</string>
	<string name="mood_label_5_left">Calm</string>
    <string name="mood_label_5_right">Stressed</string>
	<string name="sleep_hours_label">How many hours did you sleep?</string>
	<string name="sleep_efficiency_label">How rested do you feel?</string>
	<string name="label_statistics">Statistics</string>
	
	<string name="settings_label">Settings</string>
	<string name="notifications_settings_title">Notifications</string>
	<string name="notifications_settings_summary">Setup the amount of times you want to be notified</string>
	<string name="account_settings_label">Account</string>
	<string name="general_category_label">General</string>
	<string name="pref_notifications_enabled_title">Notifications?</string>
	<string name="pref_notifications_enabled_summary">Check this if you want to enable notifications</string>
	<string name="pref_notifications_agenda_mode_title">Agenda mode</string>
	<string name="pref_notifications_agenda_mode_summary">Bug me when a new appointment in the agenda is going on</string>
	<string name="pref_notifications_list_amount_title">Notifications amount</string>
	<string name="pref_notifications_list_amount_summary">Select the amount of times per day you want to be notified</string>
	<string name="pref_agenda_account_list_title">Google calendar account</string>
	<string name="pref_agenda_account_list_summary">Set the google calendar account to be used.</string>
	<string name="agenda_settings_title">Agenda</string>
	<string name="agenda_settings_summary">Setup account and dsiplay details for the agenda view.</string>

    <!--App configuration (api keys, urls, constants) -->
    <string name="appengine_base_url">http://quantifythisapp.appspot.com/</string>
    <string name="appengine_data_prefix">DataService</string>
    <string name="appengine_login_prefix">LoginService</string>
    <string name="yahoo_api_key">dj0yJmk9OTFZSWlwM29rWVRFJmQ9WVdrOWVYQnNVMUZoTjJrbWNHbzlOakV4TnpNMk9UWXkmcz1jb25zdW1lcnNlY3JldCZ4PTky</string>
</resources>