<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    
	<CheckBoxPreference
	    android:defaultValue="true"
	    android:key="pref_key_notification_enabled"
	    android:summary="@string/pref_notifications_enabled_summary"
	    android:title="@string/pref_notifications_enabled_title" />
	<CheckBoxPreference
	    android:defaultValue="true"
	    android:key="pref_key_agenda_notification_mode"
	    android:summary="@string/pref_notifications_agenda_mode_summary"
	    android:title="@string/pref_notifications_agenda_mode_title" />
	
	<ListPreference
	    android:defaultValue="digiGreen"
	    android:entries="@array/array_notifications_amount_strings"
	    android:entryValues="@array/array_notifications_amount_integers"
	    android:key="pref_key_notifications_amount"
	    android:summary="@string/pref_notifications_list_amount_summary"
	    android:title="@string/pref_notifications_list_amount_title" />


</PreferenceScreen>