<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/mood_label_1_left"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        <SeekBar
                android:id="@+id/seekBar1"
                android:layout_weight="0.80"
                android:progress="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/mood_label_1_right"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="left"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/mood_label_2_left"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="wrap_content"
                android:layout_weight=".80"
                android:progress="50"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/mood_label_2_right"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="left"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="left"
                android:text="@string/mood_label_3_left"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="wrap_content"
                android:layout_weight=".80"
                android:progress="50"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="right"
                android:text="@string/mood_label_3_right"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="left"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="left"
                android:text="@string/mood_label_4_left"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="wrap_content"
                android:layout_weight=".80"
                android:progress="50"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="right"
                android:text="@string/mood_label_4_right"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            android:gravity="left"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="left"
                android:text="@string/mood_label_5_left"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <SeekBar
                android:id="@+id/seekBar5"
                android:layout_width="wrap_content"
                android:layout_weight=".80"
                android:progress="50"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="right"
                android:text="@string/mood_label_5_right"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
    </TableRow>
</TableLayout>